Co-authored-by: Annie SG <anyuta0367@gmail.com>

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          animi deleniti nobis nulla harum dolores eius aliquid aliquam vel reiciendis similique libero voluptate
          dignissimos!
       </p>
+      <img src="img/20220705_161927.jpg" alt="balkhash">
    </div>
 </body>
 
